--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="icon" href="assets/img/favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -60,11 +62,12 @@
       <h1>Andreas Panayiotou</h1>
       <p>I'm <span class="typed" data-typed-items="Student, Researcher, Developer"></span></p>
       <div class="social-links">
-        <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bx-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://join.skype.com/invite/dBJFaNxFg5j5" class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>  
-        <a href="https://discordapp.com/users/424890610915344384" class="google-plus" target="_blank"><i class="bx bxl-discord"></i></a>
-        <a href="https://github.com/apanay20" class="google-plus" target="_blank"><i class="bx bxl-github"></i></a>       
+        <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bi-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bi-linkedin"></i></a>
+        <a href="https://join.skype.com/invite/dBJFaNxFg5j5" class="google-plus" target="_blank"><i class="bx bi-skype"></i></a>  
+        <a href="https://discordapp.com/users/424890610915344384" class="google-plus" target="_blank"><i class="bx bi-discord"></i></a>
+        <a href="https://github.com/apanay20" class="google-plus" target="_blank"><i class="bx bi-github"></i></a>
+        <a href="https://www.youtube.com/channel/UCNahvHvlk4WBJnfcLqUyjTQ"class="google-plus" target="_blank"><i class="bx bi-youtube"></i></a>          
       </div>
     </div>
   </section><!-- End Hero -->
@@ -285,11 +288,12 @@
       <h3>Andreas Panayiotou</h3>
       <p>"Do what is right, not what is easy nor what is popular."</p>
       <div class="social-links">
-        <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bx-envelope"></i></a>
-        <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://join.skype.com/invite/dBJFaNxFg5j5" class="google-plus" target="_blank"><i class="bx bxl-skype"></i></a>  
-        <a href="https://discordapp.com/users/424890610915344384" class="google-plus" target="_blank"><i class="bx bxl-discord"></i></a>
-        <a href="https://github.com/apanay20" class="google-plus" target="_blank"><i class="bx bxl-github"></i></a>    
+        <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bi-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bi-linkedin"></i></a>
+        <a href="https://join.skype.com/invite/dBJFaNxFg5j5" class="google-plus" target="_blank"><i class="bx bi-skype"></i></a>  
+        <a href="https://discordapp.com/users/424890610915344384" class="google-plus" target="_blank"><i class="bx bi-discord"></i></a>
+        <a href="https://github.com/apanay20" class="google-plus" target="_blank"><i class="bx bi-github"></i></a>
+        <a href="https://www.youtube.com/channel/UCNahvHvlk4WBJnfcLqUyjTQ"class="google-plus" target="_blank"><i class="bx bi-youtube"></i></a>     
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
