--- a/index.html
+++ b/index.html
@@ -296,14 +296,9 @@
         <a href="https://www.youtube.com/channel/UCNahvHvlk4WBJnfcLqUyjTQ"class="google-plus" target="_blank"><i class="bx bi-youtube"></i></a>     
       </div>
       <div class="copyright">
-        &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: [license-url] -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        &copy; Copyright <script>document.write(new Date().getFullYear())</script><strong><span> Andreas Panayiotou</span></strong>
+        </br>
+        All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
