--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Andreas Panayiotou</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="description" content="Andreas Panayiotou Personal Website">
+  <meta name="author" content="Andreas Panayiotou">
 
   <!-- Favicons -->
   <link rel="icon" href="assets/img/favicon.ico">
@@ -129,7 +129,7 @@
               <p>
                 <em>University of Cyprus (UCY), Nicosia, Cyprus</em>
                 <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">
-                  <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
+                  <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="University of Cyprus Logo">
                 </a>
               </p>
               <p>Courses: Modern Technical Analysis of Large Scale Graphs, Distributed Systems, Visual Computing, Video Game Software Development, Cognitive Programming, Advanced Software Engineering, Electronic Health</p>
@@ -141,7 +141,7 @@
               <p>
                 <em>University of Cyprus (UCY), Nicosia, Cyprus</em>
                 <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">
-                  <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="">
+                  <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="University of Cyprus Logo">
                 </a>
               </p>
               <p>Elective Courses: Synthesis of Parallel Algorithms, Computational Intelligent Systems, Logic in Computer Science, Advanced Networks, Network and Information Security, Internet Technologies</p>
@@ -156,7 +156,7 @@
               <p>
                 <em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</em>
                 <a href="https://www.cyens.org.cy/en-gb/" target="_blank">
-                  <img src="assets/img/cyens.png" width="25px" style="margin-left: 5px;" class="cyensLogo img-fluid" alt="">
+                  <img src="assets/img/cyens.png" width="25px" style="margin-left: 5px;" class="cyensLogo img-fluid" alt=alt="CYENS Logo">
                 </a>
               </p>
               <ul>
@@ -171,7 +171,7 @@
               <p>
                 <em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</em>
                 <a href="https://www.cyens.org.cy/en-gb/" target="_blank">
-                  <img src="assets/img/cyens.png" width="25px" style="margin-left: 5px;" class="cyensLogo img-fluid" alt="">
+                  <img src="assets/img/cyens.png" width="25px" style="margin-left: 5px;" class="cyensLogo img-fluid" alt="CYENS Logo">
                 </a>
               </p>
               <ul>
@@ -186,7 +186,7 @@
               <p>
                 <em>Bernhard Schulte Shipmanagement, Limassol, Cyprus</em>
                 <a href="https://www.bs-shipmanagement.com/" target="_blank">
-                  <img src="assets/img/bsm.png" width="35px" style="margin-left: 5px;" class="img-fluid" alt="">
+                  <img src="assets/img/bsm.png" width="35px" style="margin-left: 5px;" class="img-fluid" alt="Bernhard Schulte Shipmanagement Logo">
                 </a>
               </p>
               <ul>
@@ -214,7 +214,7 @@
         <div class="row">
           <div class="col-12 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-blue">
-              <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="margin-right: 10px;">CCP: Configurable Crowd Profiles<a href="https://s2022.siggraph.org/" target="_blank"><img src="assets/img/siggraphLogo.png" width=80px alt=""></a></a></h5>
+              <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="margin-right: 10px;">CCP: Configurable Crowd Profiles<a href="https://s2022.siggraph.org/" target="_blank"><img src="assets/img/siggraphLogo.png" width=80px alt="SIGGRAPH 2022 Logo"></a></a></h5>
               
               <p style="text-align: justify;">Andreas Panayiotou, Theodoros Kyriakou, Marilena Lemonari, Yiorgos Chrysanthou, and Panayiotis Charalambous</p>
               <p style="margin-bottom: 5px;"><i>In Special Interest Group on Computer Graphics and Interactive Techniques Conference Proceedings (SIGGRAPH ’22 Conference Proceedings)</i></p>
