--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
           </div>
           <div class="col-lg-9 col-sm-8 content">
             <p class="fst-italic" style="text-align: justify;">
-              Hello. I am Andreas and I was born in Limassol, a beautiful seaside city in Cyprus. I am currently a research associate at <a href="https://www.cyens.org.cy/" target="_blank">CYENS - Center of Excellence</a>
-              and a part of <a href="https://www.cyens.org.cy/en-gb/research/pillars-groups/visual-sciences/v-eupnea/" target="_blank">V-EUPNEA: Living, Breathing Virtual World</a> group. In 2022, I received my M.Sc in <b>Computer Science</b> from <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a>, while also
-              have a B.Sc in Computer Science from the same university.
-              My interests include, but not limited to, Crowd Simulation, Machine Learning, Computer Animation and Computer Games Technologies.
+              Hello. I am Andreas and I was born in Limassol, a beautiful city in Cyprus. Currently, I am a <b>PhD student</b> at <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a> and a <b>research associate</b> at <a href="https://www.cyens.org.cy/" target="_blank">CYENS - Center of Excellence</a>
+              (<a href="https://www.cyens.org.cy/en-gb/research/pillars-groups/visual-sciences/v-eupnea/" target="_blank">V-EUPNEA: Living, Breathing Virtual World</a> group). In 2022, I received my M.Sc in Computer Science from <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a>, while also
+              I hold a B.Sc in Computer Science from the same university.
+              My interests include, but not limited to, Crowd Simulation, Machine Learning, Virtual Environments, Computer Animation and Computer Games Technologies.
             </p>
             <div class="row">
               <div class="col-lg-12">
@@ -123,6 +123,17 @@
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Doctor of Philosophy (Ph.D) Computer Science</h4>
+              <h5>Ongoing</h5>
+              <p>
+                <em>University of Cyprus (UCY), Nicosia, Cyprus</em>
+                <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">
+                  <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="University of Cyprus Logo">
+                </a>
+              </p>
+              <p>Authoring Populated Environments</p>
+            </div>
             <div class="resume-item">
               <h4>Master of Science (M.Sc) Computer Science</h4>
               <h5>Jan 2021 - Jun 2022</h5>
@@ -214,8 +225,7 @@
         <div class="row">
           <div class="col-12 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box iconbox-blue">
-              <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="margin-right: 10px;">CCP: Configurable Crowd Profiles<a href="https://s2022.siggraph.org/" target="_blank"><img src="assets/img/siggraphLogo.png" width=80px alt="SIGGRAPH 2022 Logo"></a></a></h5>
-              
+              <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="margin-right: 10px;">CCP: Configurable Crowd Profiles</a></h5>              
               <p style="text-align: justify;">Andreas Panayiotou, Theodoros Kyriakou, Marilena Lemonari, Yiorgos Chrysanthou, and Panayiotis Charalambous</p>
               <p style="margin-bottom: 5px;"><i>In Special Interest Group on Computer Graphics and Interactive Techniques Conference Proceedings (SIGGRAPH ’22 Conference Proceedings)</i></p>
               <div class="row">
@@ -239,6 +249,7 @@
                   </div>
                 </div>
               </div>
+              <a href="https://s2022.siggraph.org/" target="_blank"><img src="assets/img/siggraphLogo.png" width=80px alt="SIGGRAPH 2022 Logo"></a>
             </div>
           </div>
         </div>
