--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                   </div>
                 </div>
               </div>
-              <a href="https://s2022.siggraph.org/" target="_blank"><img src="assets/img/siggraphLogo.png" width=80px alt="SIGGRAPH 2022 Logo"></a>
+              <a href="https://s2022.siggraph.org/" target="_blank" style="position: absolute;bottom: 10px;right: 20px;"><img src="assets/img/siggraphLogo.png" width=80px alt="SIGGRAPH 2022 Logo"></a>
             </div>
           </div>
         </div>
