--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="University of Cyprus Logo">
                 </a>
               </p>
-              <p>Authoring Populated Environments</p>
+              <p>Topic: Authoring Populated Environments</p>
             </div>
             <div class="resume-item">
               <h4>Master of Science (M.Sc) Computer Science</h4>
