--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Summer Intern</h4>
+              <h4>Research Intern</h4>
               <h5>Jun 2021 - Jul 2021</h5>
               <p>
                 <em>CYENS - Centre of Excellence | V-EUPNEA MRG, Nicosia, Cyprus</em>
