--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
   <link rel="stylesheet" href="assets/css/light-style.css" id="css_light">
   <link rel="stylesheet" href="assets/css/dark-style.css" id="css_dark" disabled>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YT74GMCD4S"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-YT74GMCD4S');
+  </script>
+
   <!-- =======================================================
   * Template Name: MyResume - v4.7.0
   * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
