--- a/404.html
+++ b/404.html
@@ -41,17 +41,28 @@
             <span class="n"></span>
             <span class="d"></span>
         </figcaption>
+        <div class="desc">
+            How you got here is a mystery. However, if you are looking for me you can click the button below to go back to my homepage.
+        </div>
         <div class="button_container">
             <button class="btn" onclick='window.location.href="https://www.apanayiotou.com/"'><span>Homepage</span></button>
         </div>        
     </figure>
     
     <style>
+        .desc{
+            font-family: "Open Sans", sans-serif;
+            color: #ffffff;
+            font-size: 18px;
+            text-align: justify;
+            margin-top: 30px;
+            font-weight: 200;
+        }
+
         .button_container {
             margin-top: 40px;
         }
         .btn {
-            border-radius: 50px;
             font-family: "Raleway", sans-serif;
             border: none;
             display: block;
@@ -61,12 +72,14 @@
             overflow: hidden;
             position: relative;
             color: #fff;
-            font-weight: 500;
             font-size: 25px;
             background-color: #222;
             padding: 17px 60px;
             margin: 0 auto;
             box-shadow: 0 5px 15px rgba(0,0,0,0.20);
+            text-transform: uppercase;
+            letter-spacing: 4px;
+            font-weight: 400;
         }
         .btn span {
             position: relative; 
@@ -122,7 +135,7 @@
             display: flex;
             align-content: space-between;
             flex-wrap: wrap;
-            height: 17em;
+            height: 15em;
         }
         figcaption span:before, .sad-mac:before {
             content: "";
@@ -134,7 +147,7 @@
         figcaption span {
             display: inline-block;
             margin: 0 2em;
-            width: 3em;
+            width: 3.15em;
             height: 6em;
         }
         .sr-text {
