--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
-    <div class="container" data-aos="zoom-in" data-aos-delay="50">
+    <div class="container" data-aos="fade" data-aos-delay="50">
       <h1>Andreas Panayiotou</h1>
       <p>I'm <span class="typed" data-typed-items="Student, Researcher, Developer"></span></p>
       <div class="social-links">
-        <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bi-envelope"></i></a>
+        <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bi-envelope-fill"></i></a>
         <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bi-linkedin"></i></a>
         <a href="https://join.skype.com/invite/dBJFaNxFg5j5" class="google-plus" target="_blank"><i class="bx bi-skype"></i></a>  
         <a href="https://discordapp.com/users/424890610915344384" class="google-plus" target="_blank"><i class="bx bi-discord"></i></a>
@@ -84,7 +84,7 @@
   <main id="main">
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
-      <div class="container" data-aos="fade-up">
+      <div class="container" data-aos="fade">
 
         <div class="section-title">
           <h2>Short Bio</h2>
@@ -123,14 +123,14 @@
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
-      <div class="container" data-aos="fade-up">
+      <div class="container">
         <div class="section-title">
           <h2>Resume</h2>
         </div>
         <p>Full CV - <a href="assets/files/Resume-Andreas_Panayiotou.pdf">Available Here</a></p>
 
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6" data-aos="fade-right">
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Doctor of Philosophy (Ph.D) Computer Science</h4>
@@ -168,7 +168,7 @@
               <p>Thesis: Shift scheduling software and mobile application for Ambulance Service Cyprus</p>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6" data-aos="fade-left">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <h4>Research Associate</h4>
@@ -223,7 +223,7 @@
     </section><!-- End Resume Section -->
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
-      <div class="container" data-aos="fade-up">
+      <div class="container" data-aos="fade">
 
         <div class="section-title">
           <h2>Publications</h2>
@@ -232,7 +232,7 @@
           2022
         </div>
         <div class="row">
-          <div class="col-12 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+          <div class="col-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
             <div class="icon-box iconbox-blue">
               <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="margin-right: 10px;">CCP: Configurable Crowd Profiles</a></h5>              
               <p style="text-align: justify;">Andreas Panayiotou, Theodoros Kyriakou, Marilena Lemonari, Yiorgos Chrysanthou, and Panayiotis Charalambous</p>
@@ -268,7 +268,7 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
+      <div class="container" data-aos="fade">
 
         <div class="section-title">
           <h2>Contact</h2>
@@ -308,7 +308,7 @@
       <h3>Andreas Panayiotou</h3>
       <p>"Do what is right, not what is easy nor what is popular."</p>
       <div class="social-links">
-        <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bi-envelope"></i></a>
+        <a href="mailto:a.panayiotou@cyens.org.cy" class="linkedin" target="_blank"><i class="bx bi-envelope-fill"></i></a>
         <a href="https://www.linkedin.com/in/andreas-panayiotou-cs/" class="linkedin" target="_blank"><i class="bx bi-linkedin"></i></a>
         <a href="https://join.skype.com/invite/dBJFaNxFg5j5" class="google-plus" target="_blank"><i class="bx bi-skype"></i></a>  
         <a href="https://discordapp.com/users/424890610915344384" class="google-plus" target="_blank"><i class="bx bi-discord"></i></a>
