--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="row">
           <div class="col-lg-3 col-sm-4 mb-4 mb-md-0">
-            <img src="assets/img/profile-img.jpg" style="border-radius: 50%;" class="img-fluid" alt="Andreas Panayiotou" title="Andreas Panayiotou">
+            <img src="assets/img/profile-img.jpg" style="border-radius: 15%; box-shadow: 0px 0px 10px 0px #00000066;" class="img-fluid" alt="Andreas Panayiotou" title="Andreas Panayiotou">
           </div>
           <div class="col-lg-9 col-sm-8 content">
             <p class="fst-italic" style="text-align: justify;">
@@ -293,7 +293,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.301085451327!2d33.36261581604214!3d35.17404756522561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14de17f31209fa19%3A0xb48b7fa603fef8!2sCYENS%20Centre%20of%20Excellence!5e0!3m2!1sen!2slu!4v1654207742792!5m2!1sen!2slu" width="100%" height="100%" style="border: 0;;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3261.301085451327!2d33.36261581604214!3d35.17404756522561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14de17f31209fa19%3A0xb48b7fa603fef8!2sCYENS%20Centre%20of%20Excellence!5e0!3m2!1sen!2slu!4v1654207742792!5m2!1sen!2slu" width="100%" height="100%" style="border: 0; box-shadow: 0px 0px 10px 0px rgb(0 0 0 / 10%);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
 
