--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <img src="assets/img/profile-img.jpg" style="border-radius: 40px; box-shadow: 0px 0px 10px 0px #00000066;" class="img-fluid" alt="Andreas Panayiotou" title="Andreas Panayiotou">
           </div>
           <div class="col-lg-9 col-sm-8 content">
-            <p class="fst-italic" style="text-align: justify;">
+            <p style="text-align: justify; font-weight: 400;">
               Hello. I am Andreas and I was born in Limassol, a beautiful city in Cyprus. Currently, I am a <b>PhD student</b> at <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a> and a <b>research associate</b> at <a href="https://www.cyens.org.cy/" target="_blank">CYENS - Center of Excellence</a>
               (<a href="https://www.cyens.org.cy/en-gb/research/pillars-groups/visual-sciences/v-eupnea/" target="_blank">V-EUPNEA: Living, Breathing Virtual World</a> group). In 2022, I received my M.Sc in Computer Science from <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a>, while also
               I hold a B.Sc in Computer Science from the same university.
@@ -127,7 +127,7 @@
         <div class="section-title">
           <h2>Resume</h2>
         </div>
-        <p>Full CV - <a href="assets/files/Resume-Andreas_Panayiotou.pdf">Available Here</a></p>
+        <p id="cvDownload">Full CV - <a href="assets/files/Resume-Andreas_Panayiotou.pdf">Available Here</a></p>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-right">
@@ -234,7 +234,7 @@
         <div class="row">
           <div class="col-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
             <div class="icon-box iconbox-blue">
-              <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="margin-right: 10px;">CCP: Configurable Crowd Profiles</a></h5>              
+              <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="    font-weight: 600;margin-right: 10px;">CCP: Configurable Crowd Profiles</a></h5>              
               <p style="text-align: justify;">Andreas Panayiotou, Theodoros Kyriakou, Marilena Lemonari, Yiorgos Chrysanthou, and Panayiotis Charalambous</p>
               <p style="margin-bottom: 5px;"><i>In Special Interest Group on Computer Graphics and Interactive Techniques Conference Proceedings (SIGGRAPH ’22 Conference Proceedings)</i></p>
               <div class="row">
