--- a/index.html
+++ b/index.html
@@ -141,7 +141,11 @@
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="University of Cyprus Logo">
                 </a>
               </p>
-              <p>Topic: Authoring Populated Environments</p>
+              <div class="resume-show-more">
+                <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
+                <p>Topic: Authoring Populated Environments</p>
+                <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
+              </div>
             </div>
             <div class="resume-item">
               <h4>Master of Science (M.Sc) Computer Science</h4>
@@ -152,8 +156,12 @@
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="University of Cyprus Logo">
                 </a>
               </p>
-              <p>Courses: Modern Technical Analysis of Large Scale Graphs, Distributed Systems, Visual Computing, Video Game Software Development, Cognitive Programming, Advanced Software Engineering, Electronic Health</p>
-              <p>Thesis: Crowd simulation by Deep Reinforcement Learning - <a href="assets/files/Andreas_Panayiotou_Master_Thesis.pdf" target="_blank">Available Here</a></p>
+              <div class="resume-show-more">
+                <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
+                <p>Courses: Modern Technical Analysis of Large Scale Graphs, Distributed Systems, Visual Computing, Video Game Software Development, Cognitive Programming, Advanced Software Engineering, Electronic Health</p>
+                <p>Thesis: Crowd simulation by Deep Reinforcement Learning - <a href="assets/files/Andreas_Panayiotou_Master_Thesis.pdf" target="_blank">Available Here</a></p>
+                <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
+              </div>
             </div>
             <div class="resume-item">
               <h4>Bachelor of Science (B.Sc) Computer Science</h4>
@@ -164,8 +172,12 @@
                   <img src="assets/img/ucy_logo.png" width="25px" style="margin-left: 5px;" class="img-fluid" alt="University of Cyprus Logo">
                 </a>
               </p>
-              <p>Elective Courses: Synthesis of Parallel Algorithms, Computational Intelligent Systems, Logic in Computer Science, Advanced Networks, Network and Information Security, Internet Technologies</p>
-              <p>Thesis: Shift scheduling software and mobile application for Ambulance Service Cyprus</p>
+              <div class="resume-show-more">
+                <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
+                <p>Elective Courses: Synthesis of Parallel Algorithms, Computational Intelligent Systems, Logic in Computer Science, Advanced Networks, Network and Information Security, Internet Technologies</p>
+                <p>Thesis: Shift scheduling software and mobile application for Ambulance Service Cyprus</p>
+                <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
+              </div>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-left">
@@ -179,11 +191,15 @@
                   <img src="assets/img/cyens.png" width="25px" style="margin-left: 5px;" class="cyensLogo img-fluid" alt=alt="CYENS Logo">
                 </a>
               </p>
-              <ul>
-                <li>Computer Graphics</li>
-                <li>Crowd Simulation</li>
-                <li>Machine Learning</li>
-              </ul>
+              <div class="resume-show-more">
+                <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
+                <ul>
+                  <li>Computer Graphics</li>
+                  <li>Crowd Simulation</li>
+                  <li>Machine Learning</li>
+                </ul>
+                <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
+              </div>
             </div>
             <div class="resume-item">
               <h4>Research Intern</h4>
@@ -194,11 +210,15 @@
                   <img src="assets/img/cyens.png" width="25px" style="margin-left: 5px;" class="cyensLogo img-fluid" alt="CYENS Logo">
                 </a>
               </p>
-              <ul>
-                <li>Unity | ML-Agents Toolkit</li>
-                <li>Training of agents using Imitation and Reinforcement Learning</li>
-                <li>Character Animation</li>
-              </ul>
+              <div class="resume-show-more">
+                <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
+                <ul>
+                  <li>Unity | ML-Agents Toolkit</li>
+                  <li>Training of agents using Imitation and Reinforcement Learning</li>
+                  <li>Character Animation</li>
+                </ul>
+                <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
+              </div>
             </div>
             <div class="resume-item">
               <h4>Information Technology Trainee</h4>
@@ -209,12 +229,16 @@
                   <img src="assets/img/bsm.png" width="35px" style="margin-left: 5px;" class="img-fluid" alt="Bernhard Schulte Shipmanagement Logo">
                 </a>
               </p>
-              <ul>
-                <li>Support company core network</li>
-                <li>Provide technical support to employees</li>
-                <li>Communicate with international company partners to learn the use of maritime softwares</li>
-                <li>Upgrade and repair of computer hardware</li>
-              </ul>
+              <div class="resume-show-more">
+                <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
+                <ul>
+                  <li>Support company core network</li>
+                  <li>Provide technical support to employees</li>
+                  <li>Communicate with international company partners to learn the use of maritime softwares</li>
+                  <li>Upgrade and repair of computer hardware</li>
+                </ul>
+                <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
+              </div>
             </div>
           </div>
         </div>
