--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@
           </div>
           <div class="col-lg-9 col-sm-8 content">
             <p style="text-align: justify; font-weight: 400;">
-              Hello. I am Andreas and I was born in Limassol, a beautiful city in Cyprus. Currently, I am a <b>PhD student</b> at <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a> and a <b>research associate</b> at <a href="https://www.cyens.org.cy/" target="_blank">CYENS - Center of Excellence</a>
-              (<a href="https://www.cyens.org.cy/en-gb/research/pillars-groups/visual-sciences/v-eupnea/" target="_blank">V-EUPNEA: Living, Breathing Virtual World</a> group). In 2022, I received my M.Sc in Computer Science from <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a>, while also
+              Hello. I am Andreas and I was born in Limassol, a beautiful city in Cyprus. Currently, I am a <b>PhD student</b> at <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">University of Cyprus</a> and a <b>research associate</b> at <a href="https://www.cyens.org.cy/" target="_blank">CYENS - Center of Excellence</a>. In 2022, I received my M.Sc in Computer Science from University of Cyprus, while also
               I hold a B.Sc in Computer Science from the same university.
               My interests include, but not limited to, Crowd Simulation, Machine Learning, Virtual Environments, Computer Animation and Computer Games Technologies.
             </p>
@@ -106,11 +105,15 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>Cyprus</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>a.panayiotou@cyens.org.cy</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:a.panayiotou@cyens.org.cy" target="_blank">a.panayiotou@cyens.org.cy</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Links:</strong> <span>
                     <a href="https://orcid.org/0000-0002-7614-1059" class="linkedin" target="_blank">ORCID</a>,
                     <a href="https://scholar.google.com/citations?user=sWQRnKwAAAAJ&hl=el" class="linkedin" target="_blank">Google Scholar</a>,
                     <a href="https://www.researchgate.net/profile/Andreas-Panayiotou-7" class="linkedin" target="_blank">ResearchGate</a>
+                  </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Labs:</strong> <span>
+                    <a href="https://veupnea.github.io/" target="_blank">V-EUPNEA: Living, Breathing Virtual World</a>,
+                    <a href="https://graphics.cs.ucy.ac.cy/" target="_blank"> Graphics and Extended Reality Lab</a>
                   </span></li>
                 </ul>
               </div>
@@ -134,7 +137,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Doctor of Philosophy (Ph.D) Computer Science</h4>
-              <h5>Ongoing</h5>
+              <h5>Sep 2022 - Present</h5>
               <p>
                 <em>University of Cyprus (UCY), Nicosia, Cyprus</em>
                 <a href="https://www.cs.ucy.ac.cy/index.php" target="_blank">
@@ -143,7 +146,7 @@
               </p>
               <div class="resume-show-more">
                 <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
-                <p>Topic: Authoring Populated Environments</p>
+                <p>Topic: Populated Virtual Environments</p>
                 <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
               </div>
             </div>
