--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-3 col-sm-4 mb-4 mb-md-0 px-5 px-sm-0">
-            <img src="assets/img/profile-img.jpg" style="border-radius: 30px; box-shadow: 0px 0px 10px 0px #00000066;" class="img-fluid" alt="Andreas Panayiotou Profile Picture" title="Andreas Panayiotou">
+          <div class="col-lg-2 col-sm-3 col-8 mb-3 mb-md-0 px-5 px-sm-0" style="  margin-left: auto; margin-right: auto;">
+            <img id="profileImage" src="assets/img/profile-img.jpg" class="img-fluid" alt="Andreas Panayiotou Profile Picture" title="Andreas Panayiotou">
           </div>
           <div class="col-lg-9 col-sm-8 content">
             <p style="text-align: justify; font-weight: 400;">
