--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                   <li>Computer Graphics</li>
                   <li>Crowd Simulation</li>
                   <li>Machine Learning</li>
+                  <li>Game Technologies</li>
                 </ul>
                 <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
               </div>
