--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           <div class="col-12 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="50">
             <div class="icon-box iconbox-blue">
               <h5><a href="https://doi.org/10.1145/3528233.3530712" target="_blank" style="    font-weight: 600;margin-right: 10px;">CCP: Configurable Crowd Profiles</a></h5>              
-              <p style="text-align: justify;">Andreas Panayiotou, Theodoros Kyriakou, Marilena Lemonari, Yiorgos Chrysanthou, and Panayiotis Charalambous</p>
+              <p style="text-align: justify;"><strong>Andreas Panayiotou</strong>, Theodoros Kyriakou, Marilena Lemonari, Yiorgos Chrysanthou, and Panayiotis Charalambous</p>
               <p style="margin-bottom: 5px;"><i>In Special Interest Group on Computer Graphics and Interactive Techniques Conference Proceedings (SIGGRAPH ’22 Conference Proceedings)</i></p>
               <div class="row">
                 <div class="col-lg-2 col-md-3 col-12" style="margin-bottom: 5px;">
