--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                     <a href="https://scholar.google.com/citations?user=sWQRnKwAAAAJ&hl=el" class="linkedin" target="_blank">Google Scholar</a>,
                     <a href="https://www.researchgate.net/profile/Andreas-Panayiotou-7" class="linkedin" target="_blank">ResearchGate</a>
                   </span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Labs:</strong> <span>
-                    <a href="https://veupnea.github.io/" target="_blank">V-EUPNEA: Living, Breathing Virtual World</a>,
-                    <a href="https://graphics.cs.ucy.ac.cy/" target="_blank"> Graphics and Extended Reality Lab</a>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Teams/Labs:</strong> <span>
+                    <a href="https://veupnea.github.io/" target="_blank">V-EUPNEA</a>,
+                    <a href="https://graphics.cs.ucy.ac.cy/" target="_blank"> UCY Graphics Lab</a>
                   </span></li>
                 </ul>
               </div>
@@ -146,6 +146,7 @@
               <div class="resume-show-more">
                 <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
                 <p>Topic: Populated Virtual Environments</p>
+                <p>Lab: UCY Graphics Lab</p>
                 <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
               </div>
             </div>
