--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
               </p>
               <div class="resume-show-more">
                 <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
-                <p>Topic: Populated Virtual Environments</p>
-                <p>Lab: UCY Graphics Lab</p>
+                <p><u>Topic:</u> Populated Virtual Environments</p>
+                <p><u>Lab:</u> UCY Graphics Lab</p>
                 <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
               </div>
             </div>
@@ -161,8 +161,8 @@
               </p>
               <div class="resume-show-more">
                 <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
-                <p>Courses: Modern Technical Analysis of Large Scale Graphs, Distributed Systems, Visual Computing, Video Game Software Development, Cognitive Programming, Advanced Software Engineering, Electronic Health</p>
-                <p>Thesis: Crowd simulation by Deep Reinforcement Learning - <a href="assets/files/Andreas_Panayiotou_Master_Thesis.pdf" target="_blank">Available Here</a></p>
+                <p><u>Courses:</u> Modern Technical Analysis of Large Scale Graphs, Distributed Systems, Visual Computing, Video Game Software Development, Cognitive Programming, Advanced Software Engineering, Electronic Health</p>
+                <p><u>Thesis:</u> Crowd simulation by Deep Reinforcement Learning - <a href="assets/files/Andreas_Panayiotou_Master_Thesis.pdf" target="_blank">Available Here</a></p>
                 <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
               </div>
             </div>
@@ -177,8 +177,8 @@
               </p>
               <div class="resume-show-more">
                 <button class="icon" onclick="resumeShow(this);"><i class="bi bi-chevron-down"></i></button>
-                <p>Elective Courses: Synthesis of Parallel Algorithms, Computational Intelligent Systems, Logic in Computer Science, Advanced Networks, Network and Information Security, Internet Technologies</p>
-                <p>Thesis: Shift scheduling software and mobile application for Ambulance Service Cyprus</p>
+                <p><u>Elective Courses:</u> Synthesis of Parallel Algorithms, Computational Intelligent Systems, Logic in Computer Science, Advanced Networks, Network and Information Security, Internet Technologies</p>
+                <p><u>Thesis:</u> Shift scheduling software and mobile application for Ambulance Service Cyprus</p>
                 <button class="icon" onclick="resumeHide(this);"><i class="bi bi-chevron-up"></i></button>
               </div>
             </div>
