--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-YT74GMCD4S"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -347,6 +346,8 @@
         &copy; Copyright <script>document.write(new Date().getFullYear())</script><strong><span> Andreas Panayiotou</span></strong>
         </br>
         All Rights Reserved
+      </br>
+      <a href="https://pages.github.com/" target="_blank"><b>Hosted on GitHub Pages</b></a>
       </div>
     </div>
   </footer><!-- End Footer -->
